Save/Update files [ci skip]

--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -39,7 +39,7 @@
  papacy_events.11.a:0 "それを確立し、統治に関する作品に焦点を当てる。"
  papacy_events.11.b:0 "外交作品に焦点を当てるべきだ。"
  papacy_events.11.c:0 "軍事に関する図書館に資金を提供する。"
- papacy_events.11.e:0 "我々はこのことをもっとよく考える必要がある。"
+ papacy_events.11.e:0 "もっと考えていかないとな。"
  papacy_events.12.t:1 "システィーナ礼拝堂"
  papacy_events.12.d:0 "カッペッラ・マッジョーレ－大礼拝堂－で民衆は、バジリカよりも狭い公共空間しか利用できません。月日というのはフラ・アンジェリコが手掛けた、かつての壮大な礼拝堂にも残酷なもので、壁は傾いており、荒廃しています。構造は毎年訪れる多くの民衆にとって十分に安全ではなく、礼拝堂を取り壊すべきです。新しく、より壮大な建物がその場所を占めるべきであり、新しいシスティーナ礼拝堂を手掛けるよう依頼されれば、光栄に思う著名な芸術家は多くいるのですから。"
  papacy_events.12.a:0 "古いのは解体し、同じ場所に新しいのを建設しよう。"
@@ -1559,7 +1559,7 @@
  parlaments.24.dd:0 "彼らの金を拒否する。"
  parlaments.25.t:0 "[Root.Culture.GetName]の要求"
  parlaments.25.d:0 "我が国には国家による議会が欠けているが、地方議会は古くから多くの州で存在している。これらは自国以外の地域にはほとんど影響を与えないが、時には国家に近づき、その存在が国家の税制をより効率的にすることができる。\n\n最近、そのような地方議会のいくつかが、国家レベルでの代表権を要求し始めたことで[Root.GetName]において問題が起こりつつある。彼らは中央政府の代表権は不十分であり、支配者に意見を述べることができる中央議会がこれを緩和する唯一の方法であると感じている。"
- parlaments.25.a:0 "我々はそれについて考えるだろう。"
+ parlaments.25.a:0 "考えてみよう。"
  parlaments.25.b:0 "このような考えは粉砕する必要がある。"
  parlaments.26.t:0 "直接の貢献"
  parlaments.26.d:0 "議会で現在議論されている問題について、熱心に関心を寄せている集団は、[Root.GetName]から我々と非常によく連携しており、国家に直接貢献するようになっている。まだ反対している議員をうまく「説得」するために金を上手く使うか、あるいは少なくとも、我々がこれまでに負担してきたコストについて、少なくとも我々に補償することが、彼らの希望である。"
