--- a/source/localisation/diplo_reasons_l_english.yml
+++ b/source/localisation/diplo_reasons_l_english.yml
@@ -67,7 +67,7 @@
  DIPLO_NO_STRATEGIC_INTEREST:0 "戦略的関心がない："
  DIPLO_TOO_EARLY:0 "戦争に対し早期すぎる："
  DIPLO_COALITION:0 "包囲網戦争："
- DIPLO_IS_REVOLUTION_TARGET:0 "$WHO$は革命の対象である："
+ DIPLO_IS_REVOLUTION_TARGET:0 "$WHO$は革命目標である："
  DIPLO_NOT_HAVE_LOCATION:0 "$NAME$を支配していない："
  DIPLO_WAR_PEACE_SCORE:0 "戦勝点が和平内容よりも大きいです："
  DIPLO_QUIET_BONUS:0 "戦争に貢献していない："
