--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1107,7 +1107,7 @@
  EVTNAME3074:0 "植民地の拡大"
  EVTDESC3074:1 "It would seem that our harsh treatment of the [Root.NativeCulture.GetName] people living in [Root.GetName] has paid off in a massive way. Forcing those primitives off of their rich fertile soil has created new opportunities for [Root.Culture.GetName] settlers to take their place and our colonial companies have already begun exploiting the ancestral land of the [Root.NativeCulture.GetName], but they request financial aid to complete the construction of the new settlement."
  EVTOPTA3074:1 "For glory, God, and gold!"
- EVTOPTB3074:1 "It's too expensive."
+ EVTOPTB3074:1 "金がかかりすぎる。"
  EVTNAME3075:1 "Lucrative Trade Agreements With the [Root.NativeCulture.GetName] Tribe"
  EVTDESC3075:1 "Lesser nations question what value there is in engaging the [Root.NativeCulture.GetName] people in trade, but our merchants know better. It seems that these people do not know the true value of what they hold, and we have a golden opportunity to strike riches from these people by taking massive stores of valuable goods and metals in exchange for some relatively trivial medical resources."
  EVTOPTA3075:1 "Make the deal!"
@@ -1269,7 +1269,7 @@
  EVTOPTA5023:0 "追加の商人を受け取る。"
  EVTOPTB5023:0 "金銭的な利益を受け取る。"
  EVTNAME5024:0 "外交の動き"
- EVTDESC5024:1 "Diplomacy between nations is often affected by random factors on both sides involved in ways that are beyond the ability of the diplomatic corps of either state. With the ever-changing viccissitudes of our relations with our neighbors shifting even more swiftly than usual at the moment, our diplomats are finding it difficult to keep up."
+ EVTDESC5024:1 "国家間の外交は、しばしば両国それぞれの突発的な要因に影響を受ける。それは両国外交団の能力を超えたものだ。我が国と近隣諸国との関係は千変万化しているが、現在の変化はふだんよりさらに素早いものであり、外交官たちはこれに追随することに困難を感じている。"
  EVTOPTA5024:0 "新たな外交官を任命する。"
  EVTOPTB5024:0 "近隣諸国との関係を改善する。"
  EVTNAME5025:0 "優れた外交"
@@ -1327,7 +1327,7 @@
  EVTOPTA5055:0 "問題を根絶するよう試みる。"
  EVTOPTB5055:0 "それらを無視する。"
  EVTNAME5056:0 "外交的侮辱"
- EVTDESC5056:1 "A careless turn of phrase by [Root.Monarch.GetTitle] [Root.Monarch.GetName] has greatly offended the [insulted_party.GetAdjective] [insulted_party.Monarch.GetTitle]. Mollifying [insulted_party.Monarch.GetHerHim] will not be easy without losing face."
+ EVTDESC5056:1 "[Root.Monarch.GetTitle]の[Root.Monarch.GetName]からの書面に不注意な言い回しがあり、[insulted_party.GetAdjective]の[insulted_party.Monarch.GetTitle]はたいへん気分を害している。面目を失うことなく[insulted_party.Monarch.GetHerHim]をなだめるのは簡単ではない。"
  EVTOPTA5056:0 "我々はこれを忘れないだろう。"
  EVTOPTB5056:0 "緊張の緩和を試みる。"
  EVTNAME5057:0 "強化の取り組み"
@@ -1437,7 +1437,7 @@
  EVTOPTA5089:0 "請願を受け入れよう。"
  EVTOPTB5089:0 "請願を拒否しよう。"
  EVTNAME5090:0 "貴族たちが援助を要求"
- EVTDESC5090:0 "One of [Root.GetUsableName]'s most powerful noble families has, despite its vast landed wealth, managed to accumulate significant debts that it is finding hard to pay back. They have approached the [Root.Monarch.GetTitle] to ask for help, hoping that their distant kinship with the [Root.Monarch.Dynasty.GetName] family and their promises of undying support will sway [Root.Monarch.GetHerHim] to help them out in their time of need."
+ EVTDESC5090:0 "[Root.GetUsableName]のある上流貴族の一家が、広大な所領からの収益があるにもかかわらず、莫大な負債を抱えて返済困難に陥っている。彼らは[Root.Monarch.GetTitle]に援助を求めてきている。[Root.Monarch.Dynasty.GetName]家と遠縁であり、永遠の奉公を約束しているのだから、[Root.Monarch.GetHerHim]の心は揺り動かされ、まさに困ったときに手を差し伸べてくれるだろうと期待しているのだ。"
  EVTOPTA5090:0 "援助を与えよう。"
  EVTOPTB5090:0 "援助を拒否しよう。"
  EVTNAME5091:0 "海外の反体制派の支援"
@@ -1445,9 +1445,9 @@
  EVTOPTA5091:0 "支援する。"
  EVTOPTB5091:0 "拒否する。"
  EVTNAME5092:0 "外国との交易競争の高まり"
- EVTDESC5092:1 "Foreign merchants are increasingly out-competing [Root.GetAdjective] traders in our ports, flooding our markets with cheap goods produced elsewhere. This is making it difficult for our traders to make a living. They have come before the [Root.GetRulerTitleOrRegency] to propose a new tariff on foreign goods, which would help protect them from competition from abroad."
+ EVTDESC5092:1 "外国の商人が[Root.GetAdjective]の商人を我が国の港で打ち負かすようになってきており、市場には国外の安い商品で溢れている。このため、我が国の商人は生計を立てることが困難になっている。彼らは[Root.GetRulerTitleOrRegency]に対し、外国商品への新たな関税を設け、外国の競争相手から守ってほしいと求めている。"
  EVTOPTA5092:0 "新しい関税を課す。"
- EVTOPTB5092:1 "There shall be no new tariffs."
+ EVTOPTB5092:1 "新しい関税を課すべきではない。"
  EVTNAME5093:1 "Parliament Demands [Root.Dip_Advisor.GetName]'s Removal"
  EVTDESC5093:1 "Citing several example of [Root.Dip_Advisor.GetHerHis] allegedly poor performance and bad judgment (but in fact motivated by [Root.Dip_Advisor.GetHerHis] outspoken criticism of them), parliamentary leaders are demanding the removal of [Root.Dip_Advisor.GetName] from office."
  EVTOPTA5093:1 "Fire [Root.Dip_Advisor.GetHerHim]!"
@@ -2110,7 +2110,7 @@
  EVTOPTA6103:0 "彼らに文句を言わせておけ。"
  EVTOPTB6103:0 "まあ、我々はいくつか譲歩をすることもできる。"
  EVTNAME6104:0 "海軍の開発"
- EVTDESC6104:1 "Our use of superior seamanship is leading to huge developments in naval thought, which will benefit our fleet for many years to come."
+ EVTDESC6104:1 "我々は優れた航海術を使いこなす能力を持っており、そのことが海軍思想を大きく発展させている。これはこの先何年も我が国の艦隊の利益となるだろう。"
  EVTOPTA6104:0 "これは本当に悪くはない。"
  EVTNAME6105:0 "海軍の傲慢"
  EVTDESC6105:1 "Our seamanship is so superior that to be honest complacency is setting in. People are content to rest on their laurels, but this could make us vulnerable to challenges by would-be upstarts."
@@ -2148,7 +2148,7 @@
  EVTNAME6114:0 "我々の陸軍は偉大だろう"
  EVTDESC6114:0 "我々の偉大な陸軍は非常に壮大であり、次々と勝利に向かって行進している。これらの勝利からの経験は、新しい兵士の募集と訓練に良い影響を与える。"
  EVTOPTA6114:0 "これは素晴らしい。"
- EVTNAME6115:0 "Our Army is not so Grand"
+ EVTNAME6115:0 "我々の陸軍はそれほど偉大ではない"
  EVTDESC6115:0 "我が軍は一瞬だけ、世界の羨望の的であったが、次の瞬間には誰もそれについて良く言うものを持っていない。我々の壮大な軍隊がどうやって滑り落ちたかはわからないが、募集に影響を与える可能性がある。"
  EVTOPTA6115:0 "募集が少し難しくなるだろうな。"
  EVTOPTB6115:0 "軍を揺さぶる時だ！"
@@ -2283,14 +2283,14 @@
  EVTOPTA6153:0 "不実な要素は手放してしまおう。"
  EVTOPTB6153:0 "小さな現金で、いく人かは心変わりするかもしれない。"
  EVTNAME6154:0 "活力ある内閣"
- EVTDESC6154:0 "我々の内閣の正しい人たちの組み合わせは、税収を少し上げるための条件を作り出すことができる。あなたはこれがちょうど起こったことを聞いて喜んでいただけるでしょう。"
- EVTOPTA6154:0 "これは確かに良い知らせだ。"
+ EVTDESC6154:0 "内閣の適任者の組み合わせにより、税収が少しでも増える条件が整いました。これが実現したとお聞きになり、さぞお喜びのことと存じます。"
+ EVTOPTA6154:0 "確かに良い知らせだ。"
  EVTNAME6155:0 "政府の汚職"
- EVTDESC6155:0 "誤った人があなたの内閣に入ると、それは国にとって悪い出来事を意味し、またそれを排除することは困難である。"
+ EVTDESC6155:0 "誤った人が内閣に入ると、それは国にとって悪い出来事を意味し、また排除することは困難である。"
  EVTOPTA6155:0 "税が下落しているように見える。"
- EVTOPTB6155:0 "インフレ率が上昇している。"
+ EVTOPTB6155:0 "インフレが進んでいる。"
  EVTNAME6156:0 "少数派の繁栄"
- EVTDESC6156:1 "With their legal status guaranteed by our Bill of Rights, our [minority_religion_province.Culture.GetName] minority is prospering under our rule."
+ EVTDESC6156:1 "権利章典によって法的地位が保証されているため、[minority_religion_province.Culture.GetName]の少数派は我々の支配の下で繁栄している。"
  EVTOPTA6156:0 "良かったな。"
  EVTNAME6157:0 "反動"
  EVTDESC6157:0 "我々が権利章典を導入して以来、我々の以前の支配階級の多くは疎外感を感じていたが、議論するのではなく、反乱を起こしているようだ。"
@@ -2486,7 +2486,7 @@
  EVTNAME6315:0 "要塞は不十分である"
  EVTDESC6315:0 "我々の軍隊の攻撃的な性質は、地方の司令官が地元の要塞の状態に関心がないことを示している。"
  EVTOPTA6315:0 "私は司令官たちを信頼している。"
- EVTOPTB6315:0 "おそらく、我々はこのことについて考える必要がある。"
+ EVTOPTB6315:0 "考えた方がいいのかもしれない。"
  EVTNAME6316:0 "誰が要塞を気にしている？"
  EVTDESC6316:0 "攻撃的な姿勢に焦点を当てた後、我々の将軍たちは、我々の大きな要塞の一部を荒廃させてしまっている。"
  EVTOPTA6316:0 "私も気にしない。"
@@ -2551,7 +2551,7 @@
  EVTOPTB6333:1 "それらは聞くに値するな。"
  EVTNAME6334:0 "集権化が恩恵をもたらす"
  EVTDESC6334:0 "中央集権的な政策のおかげで、我々は国家をより適切に支配し、すべての人に利益をもたらしている。"
- EVTOPTA6334:0 "これは良い知らせだ。"
+ EVTOPTA6334:0 "それは良い知らせだ。"
  EVTNAME6335:0 "自治の喪失によって不満を蓄積した州"
  EVTDESC6335:0 "我々の集権化政策は、多くの州が多くの自治を失ったと感じている。反乱の噂も広まっている。"
  EVTOPTA6335:0 "彼らは反乱を起こせばよい。"
@@ -2573,7 +2573,7 @@
  EVTOPTA6341:0 "文句を言わせておこう。"
  EVTOPTB6341:0 "たぶん、我々は少しを与えることができるだろう。"
  EVTNAME6400:0 "植民地の拡大"
- EVTDESC6400:2 "With lands on our frontier still yet unclaimed, a large group of colonists have arrived at court requesting permission to set up their own colony, independent of our existing colonial efforts. They wish to claim [wanderer_province.GetName] in the name of the [Root.Owner.Monarch.GetTitle] and begin establishing [Root.Owner.GetAdjective] control over the area, asking only for negligible financial support to do so."
+ EVTDESC6400:2 "我々の辺境地がまだ請求されていないまま、入植者の大規模な一団が宮廷に到着し、既にある植民地努力から独立した植民地の設立許可を要求している。彼らは[Root.Owner.Monarch.GetTitle]の名で[wanderer_province.GetName]を主張し、[Root.Owner.GetAdjective]の支配権を地域に確立し始めることを望んでおり、そのためのわずかな財政支援だけを求めている。"
  EVTOPTA6400:0 "さて、彼らを止める私だろうか？"
  EVTNAME6401:0 "植民地の移住"
  EVTDESC6401:1 "To our shock, many colonists have decided that [Root.GetName] is an unsuitable location for a colony and have begun migrating to our settlement in [migration_province_target.GetName] instead. There’s little we can do to stop them now, as [Root.Owner.GetAdjective] villages and towns have already begun appearing all over the [migration_province_target.GetAdjective] hinterlands."
@@ -2592,7 +2592,7 @@
  EVTOPTB6407:0 "決してそんなことはない！"
  EVTNAME6417:0 "文化的併合"
  EVTDESC6417:0 "良い知らせだ、我々のより進歩的な人々のいくつかは、納得し、我々の文化を完全に受け入れることを決めた。"
- EVTOPTA6417:0 "これは確かに良い知らせだ。"
+ EVTOPTA6417:0 "確かに良い知らせだ。"
  EVTNAME6418:0 "素晴らしき年"
  EVTDESC6418:0 "我々の穀物の農場のいくつかにとっては素晴らしい年となり、我々はより多くの兵士を養成し、人的資源を増やすことができる。"
  EVTOPTA6418:0 "どんなに多くの人的資源を持っても多すぎることはない。"
@@ -2602,8 +2602,8 @@
  EVTNAME6420:0 "貧弱なブドウの収穫"
  EVTDESC6420:0 "我々の最も有名なブドウ畑の一つは、驚くほど劣った品質のワインを生産している。言うまでもなく、人々はそれにより我が国のことを残念に感じている。"
  EVTOPTA6420:0 "私は飲んでいないことを願うばかりだ。"
- EVTNAME6421:0 "Quality Wool"
- EVTDESC6421:0 "最近の羊毛の出荷は、我が国に追加の富をもたらす、比類のない品質のものであった。"
+ EVTNAME6421:0 "良質な羊毛"
+ EVTDESC6421:0 "最近出荷された羊毛は比類なき品質で、追加収入を得ることができた。"
  EVTOPTA6421:0 "どんなにカネを持っても多すぎることはない。"
  EVTNAME6422:0 "貧弱な制服"
  EVTDESC6422:0 "我々の布の供給業者の一つは、我々の軍服のために標準以下の布を提供している。我々は、軍隊が感動していないことをよく理解している。"
@@ -2738,7 +2738,7 @@
  EVTDESC964:0 "§W生まれながらの教皇特使§!のような権威ある称号は、神聖ローマ帝国のカトリック司教によってのみ保持することができる。我々がもはやこの要件を満たしていないため、教皇はその称号を取り消した。"
  EVTOPTA964:0 "大いなる不幸だ。"
  EVTNAME850:0 "$DYNASTY$のための栄光"
- EVTDESC850:1 "Scholars have discovered ancient documents tracing the heritage of the [Root.Monarch.Dynasty.GetName] dynasty back to Julius Caesar himself. This must be used to our advantage."
+ EVTDESC850:1 "学者は、ユリウス・カエサル自身に遡る、[Root.Monarch.Dynasty.GetName]朝の血筋をたどる古代の文書を発見した。これは我々にとって有利となるよう利用されるべきものだ。"
  EVTOPTA850:0 "王位を強化するために使用する。"
  EVTOPTB850:0 "海外に情報を公開する。"
  EVTNAME851:0 "$DYNASTY$家が揺れている"
@@ -2758,10 +2758,10 @@
  EVTNAME855:0 "戦士たる者、書を読まず"
  EVTDESC855:0 "国内の有能で生産的な人は皆、戦争へと注力しているため、音楽家や詩人の軽薄な活動のための時間が大幅に減っている。どんなに優れた詩人でも、普通の農夫より優秀な兵士にはなれないのだ。"
  EVTOPTA855:0 "剣は本よりも強し。"
- EVTNAME859:0 "War-Weary Population"
- EVTDESC859:1 "Our peasants are tired of our war and our soldiers are exhausted. It is becoming increasingly difficult to force them to fight for us, as they find ever more creative methods to dodge conscription. Even those in the army think more of home than of the glory of defeating our enemy. We should conclude the war quickly or it may soon take a turn for the worse."
- EVTOPTA859:0 "The peasants are to be ignored."
- EVTOPTB859:0 "Soldiers are just peasants in uniform."
+ EVTNAME859:0 "戦争に疲れた人々"
+ EVTDESC859:1 "我々の農民たちは戦争に疲れており、兵士たちは消耗している。彼らを我らのために戦わせることはますます困難になってきている。彼らは徴兵を回避する手段をどんどん思いつくからだ。兵士たちでさえ、敵を打ち倒す栄誉よりも家庭のことを考えている。早急に戦争を集結しなければ、さらに状況は悪化しかねない。"
+ EVTOPTA859:0 "農民たちは無視される。"
+ EVTOPTB859:0 "兵士たちは制服を着た農民にすぎない。"
  EVTNAME860:0 "希望はまだある"
  EVTDESC860:0 "$COUNTRY$は戦争に疲れているが、最も身分の低い農民から$MONARCH$に至るまで、皆の胸にはまだ希望と前向きな精神がある。我々はこの戦争を乗り越え、勝利するだろう。"
  EVTOPTA860:0 "Once more into the breach."
@@ -2774,7 +2774,7 @@
  EVTDESC862:0 "Stories of the prospects of the New World in the west are attracting quite a lot of people who wish to enhance their future there. The question is who to send on the next ship?"
  EVTOPTA862:0 "我々は常にいくつかの農民を利用できる。"
  EVTOPTB862:0 "貴族が役に立つだろう！"
- EVTNAME863:0 "Merchants Spread Thin"
+ EVTNAME863:0 "商人たちは薄く広がる"
  EVTDESC863:1 "Our merchants bring in money from trade all over the world. However, it seems that they have somewhat overstretched, and the [Root.GovernmentName] is not able to give them the full support of [Root.GetUsableName]'s diplomatic clout. It seems we will have to make a choice as to where to focus our trade."
  EVTOPTA863:0 "アジアはそれほど重要ではない。"
  EVTOPTB863:0 "我々はヨーロッパを無視することができる。"
@@ -2803,7 +2803,7 @@
  EVTOPTA869:0 "費用を惜しむな…"
  EVTOPTB869:0 "注意深くやれ。"
  EVTNAME870:0 "生産技術の向上"
- EVTDESC870:1 "There are reports of farmers and miners being more productive than local [Root.GetLowLevelOfficialForCountry]s expect them to be. We should investigate if there is something that the entire nation of $COUNTRY$ can benefit from."
+ EVTDESC870:1 "農家や鉱夫たちは、地元の[Root.GetLowLevelOfficialForCountry]たちが期待するよりも生産性が高いという報告がある。 $COUNTRY$の国民が恩恵を受けることができるものかどうかを調べるべきだ。"
  EVTOPTA870:0 "費用を惜しむな。"
  EVTOPTB870:0 "注意深くやれ。"
  EVTNAME871:0 "地位の売却"
@@ -2915,7 +2915,7 @@
  EVTDESC9551:0 "我々の交易を拡大する方法に関する議論は、今や議会で進行中である。我々はすでに地方の交易ノードを独占的に管理しているが、海外取引の可能性に魅了される人は多い。他の人は、危険性が大きすぎるとして国内でより多くのお金を稼ぐことができると確信している。"
  EVTDESC9553:0 "我々の議会は、新たな交易ノードを設けるという提案に関して意見が二分している。彼らの大部分は、我々のような著名な交易国が独自の交易ノードを持つべきではないという論理的理由を理解することはできないが、我々の知る限り、これらは決して安価ではないので、慎重な検討を必要とする。"
  EVTDESC753:0 "$COUNTRY$の際限のない征服戦争を嫌悪し、どうやら、いくつかの交易ノードは我々の商人を追放することを決めたようだ。"
- EVTDESC773:0 "いくつかの国は、どうやら我々の外交政策に愕然としているようだが、彼らは、我々の財政を打ち負かすため商人を暗殺する形で報復することを決めたようだ！\n\nさらに衝撃的なのは、それが我々自身の交易ノードでさえ起こりえるということだ…"
+ EVTDESC773:0 "一部の国は、どうやら我々の外交政策に憤慨しているようで、我々の財政を攻撃するため商人を暗殺することで報復することにしたようだ！\n\nさらに衝撃的なのは、それが我々自身の交易ノードでさえ起こりえるということだ…"
  EVTDESC9512:0 "我々は植民地の入植者から、$PROVINCENAME$に関して、この地域が象牙にとって完璧な交易ノードであることが証明されたという報告書を受け取った。我々の政府にとってこの上ない幸福だ。"
  EVTDESC2008:0 "ローマカトリック教会に対する反対や批判は、修道僧や聖職者の汚職の増加に伴って、ヨーロッパ中に広がっている。現在の原理と教会の欲望に対して疑問が唱えられている。最近、これらのいわゆる異端によって揺さぶられた$COUNTRY$は、今や公然とローマから断絶し、自らをプロテスタントと宣言している。"
  EVTDESC2009:0 "プロテスタントの宗教改革は、ヨーロッパ全土で燎原の火のごとく広がっている。いくつかの異なる動きがすでに形成されており、キリスト教の信仰を改革する代替の方法を提案している。いわゆる改革派の思想が$COUNTRY$を支配するようになった。今、$MONARCH$はカトリックを完全に放棄し、改革されたキリスト教の形態を採用することを決めた。"
@@ -3000,11 +3000,11 @@
  EVTOPTB9600:0 "聖職者にその権限を維持しよう。"
  EVTNAME9520:1 "奴隷制度の廃止"
  EVTDESC9520:1 "$COUNTRY$で奴隷制度が廃止されたため、遠隔地域であっても、すべての国民が、生計を立てるための別の方法を見つける必要がある。うまくいけば、我々の交易商は利益のある別のものを見つけ出すことができるだろう。"
- EVTOPTA9520:0 "私の人々を行かせよう！"
+ EVTOPTA9520:0 "我が国民を行かせよう！"
  EVTNAME9522:0 "ココア"
- EVTDESC9522:0 "我々は植民地の入植者から、$PROVINCENAME$の地方の肥沃な土地が州の熱帯の多雨な気候と相まって、ココア生産にとって非常に適した地域となっているという報告を受けた。"
+ EVTDESC9522:0 "$PROVINCENAME$植民地の入植者から、州の肥沃な土地と暑く雨の多い熱帯気候が相まって、カカオ生産に非常に適した地域となっているという報告を受けた。"
  EVTOPTA9522:0 "これは良い知らせだ。"
- EVTNAME610:0 "$FROMCOUNTRY$を統合"
+ EVTNAME610:0 "$FROMCOUNTRY$統合"
  EVTDESC610:0 "小さな国が独立を放棄してより大きな国家に加わる際には、適応すべき問題がたくさんある。容易な部分もいくつかあるとはいえ、あらゆる状況に対応するために、国家による管理を行き届かせていく必要がある。"
  EVTOPTB610A:0 "統合には時間がかかるだろう。"
  EVTNAME9550:0 "交易への注力"
@@ -3577,13 +3577,13 @@
  EVTOPTA725:0 "我々はこれを受け入れるべきだ。"
  EVTOPTB725:0 "農奴は彼らの土地に帰るべきだ。"
  EVTNAME726:0 "$MONARCHTITLE$の評判が傷つけられた！"
- EVTDESC726:1 "Some sort of propaganda text is circulating in the court about how $MONARCH$ is a ruthless powermonger. This might impact our relations with our subjects and other countries."
+ EVTDESC726:1 "$MONARCH$がどれだけ無慈悲な権力の亡者であるかを宣伝するいくつかの文書が宮廷で流布している。これは、従属国および他国との関係に影響を与える可能性があるだろう。"
  EVTOPTA726:0 "評判を受け入れる！"
  EVTOPTB726:0 "このために誰かを処刑する！"
  EVTNAME727:0 "勇敢に戦え！"
  EVTOPTA727:0 "戦列を保て！"
  EVTNAME728:0 "ライバルへの請求権！"
- EVTDESC728:1 "Too long has [claims_province.Owner.GetUsableName] threatened our borders! But no more: We have managed to produce very legitimate documents which show that we have a historical claim on [claims_province.GetName]!"
+ EVTDESC728:1 "長きにわたり[claims_province.Owner.GetUsableName]は、我が国の国境を侵してきた。しかしこれ以上は許さない。我々は、[claims_province.GetName]について歴史的な請求権を有することを示す非常に正当な文書を作成した！"
  EVTOPTA728:0 "栄光は我らが$COUNTRY$にあり！"
  EVTNAME800:0 "貴族の蜂起"
  EVTDESC800:0 "$COUNTRY$の貴族たちは、特権を制限するという我々の決断に対して武器を取り、我々を止めることを誓った。我々はおそらく、行動を起こす前にこのことを考慮すべきだろう。"
@@ -3677,7 +3677,7 @@
  EVTDESC835:0 "我々がより防御的な思想に着目し始めているので、謙虚な技術者（通常、軍隊の隊列の一番下の位置）は真の天才の証を強く印象づける機会を得た。"
  EVTOPTB835A:0 "彼はかなり優れていると推測する…"
  ideagroups.802.b:0 "彼には彼の地元の州の防御を改善させよう。"
- EVTNAME836:0 "海軍思想は苦しんでいる"
+ EVTNAME836:0 "海軍思想の受難"
  EVTDESC836:0 "我々の注力が海軍から陸軍へとさらに移行するにつれて、我々の熟練した造船工たちのいくつかは他の場所で雇用を求めることになった。これにより我々の造船所は苦しんでいる。"
  EVTOPTB836A:0 "予想されたことだ。"
  EVTNAME837:0 "海軍将校の引退"
@@ -3791,7 +3791,7 @@
  random_event.EVTDESC3:0 "選出された政府の一員が戦争中に敵と同盟し、支援を行っていることが明らかになった。我々は反逆のために彼を公開し、処刑するだろうが、彼は社会で広く支持されており、不安定さを引き起こす可能性がある。"
  random_event.EVTOPTA3:0 "彼を処刑する。"
  random_event.EVTOPTB3:0 "彼が関与したことを減らすように努力しろ。"
- random_event.EVTNAME4:0 "A New Religion Spreads?"
+ random_event.EVTNAME4:0 "新しい宗教の広がり？"
  random_event.EVTDESC4:0 "私たちの農民の大衆たちは何らかの種類の球？を含む奇妙な儀式を行っている。我々はさらなる宗教的な混乱を防ぐ必要がある！"
  random_event.EVTOPTA4:0 "少なくとも大学には入れさせるな！"
  random_event.EVTOPTB4:0 "うちの顧問はサッカーも聞いたことがないのか？！"
@@ -3876,18 +3876,18 @@
  colonial.EVTDESC14:1 "A monastic group from the Society of Jesus has traveled to the New World to establish a mission in the [Root.GetName] colony, to Christianize the native people on our colonial borders. With any luck, the Jesuits may be able to civilize these people and teach them to embrace the true word of Christ."
  colonial.EVTOPTA14:0 "神のより大いなる栄光のために！"
  colonial.EVTNAME15:0 "植民地がローマ熱に襲われた！"
- colonial.EVTDESC15:2 "Illness has struck our colony in $PROVINCENAME$. Just as we have brought many foreign diseases to the native people, it would seem there is a curse on the land and our people are falling ill and dying at an alarming rate. If we do not organize a response, we risk losing our colony in [Root.GetName] entirely."
+ colonial.EVTDESC15:2 "病気が$PROVINCENAME$植民地を襲っている。我々が原住民に多くの病気を外からもたらしたように、土地に呪いがあるようで、民衆は病気になり、驚くべき速さで死んでいる。対応策を練らなければ、[Root.GetName]植民地を完全に失う危険性がある。"
  colonial.EVTOPTA15:0 "反響を整理するために誰かを派遣する。"
  colonial.EVTOPTB15:0 "州を隔離しろ！"
  colonial.EVTOPTC15:0 "最善の結果となるよう祈る。"
  colonial.EVTNAME18:0 "新世界のコーヒー"
- colonial.EVTDESC18:0 "人々はそれを十分に得ることができないので、コーヒーは非常に需要の高い製品になっている。気候と広大な新世界の広がりは、コーヒーを栽培するのに最適な場所のようだ。おそらく、[Root.GetName]での生産に向けて進めることを検討すべきだろうか？"
+ colonial.EVTDESC18:0 "大衆のコーヒー狂いにより、コーヒーは非常に需要の高い製品になっている。気候と広大な新世界は、コーヒー栽培に最適な場所のようだ。もしかすると、[Root.GetName]での生産へと舵を切ることを検討すべきだろうか？"
  colonial.EVTOPTA18:0 "それを黒い金と呼んでいる者もいるようだしな。"
  colonial.EVTOPTC18:0 "我々は物事を混乱させない方がいい。"
  colonial.19.t:0 "[Root.GetName]の港の成長"
- colonial.19.d:0 "[Root.GetName]の植民地の成長は、常にこの地域の天然の良港と密接に関連しており、時間が経つにつれて、この州は地方の交易の中心地として機能するようになった。\n定住が進むにつれて、港の重要性も高まっている。居留地は、全地域のための集散地として機能するようになり、地元の交易商だけでなく、外国人も、彼らの交易を行うためにそこへ向かっている。"
- colonial.19.a:0 "これが我々の賢明な政策の結果でなければならない。"
- ship_building_problems:0 "造船の問題"
+ colonial.19.d:0 "[Root.GetName]植民地の成長は、常にこの地域の天然の港と密接に関連しており、時が経つにつれてこの州は、地方の交易の要衝として機能するようになっている。\n定住が進むにつれて港の重要性も高まっている。居留地は、全地域のための集散地として機能するようになり、地元の交易商だけでなく、外国人も交易を行うようになっている。"
+ colonial.19.a:0 "これが賢明な政策の結果なのだろう。"
+ ship_building_problems:0 "造船問題"
  increased_tariffs:0 "関税の増加"
  desc_increased_tariffs:0 "[Root.ColonialParent.GetName]は我々の抗議に耳を傾けず、経済に対する関税を引き上げた。"
  reduced_tariffs:0 "関税の減少"
