--- a/source/localisation/hinduism_l_english.yml
+++ b/source/localisation/hinduism_l_english.yml
@@ -20,9 +20,9 @@
  desc_vishnu_brahma:0 "統治者は、神の知識を伝えることができる賢いグルから学びたいと考えている。"
  vishnu_celibacy:0 "禁欲"
  desc_vishnu_celibacy:0 "統治者は、性行為を控え、精神と魂を集中させ、悟りへと到達する。"
- hindu_withdrawn_contemplation:0 "熟考を取り下げる"
+ hindu_withdrawn_contemplation:0 "黙想にふける"
  desc_hindu_withdrawn_contemplation:0 "統治者は、政治を軽視し、宗教の事柄を熟考することでより賢くなる。"
- hindu_withdrawn_meditation:0 "瞑想を取り下げる"
+ hindu_withdrawn_meditation:0 "瞑想にふける"
  desc_hindu_withdrawn_meditation:0 "統治者は、女神の深い知識を得るためにタントラ教の瞑想を行っている。"
  hindu_ganges_pilgrimage:0 "ガンジス巡礼"
  desc_hindu_ganges_pilgrimage:0 "統治者は神聖な川であるガンジス川に過去の統治者の灰を水葬する。"
@@ -38,9 +38,9 @@
  hindu_events.1.g:0 "私はスーリヤから、最高の光を授かるだろう。"
  hindu_events.1.h:0 "私は、まだその決断をすることができない。"
  hindu_events.2.t:0 "創造神シヴァ"
- hindu_events.2.d:1 "Of all those who attempt to capture Shiva's glory in art, $ARTIST$ has always succeeded beyond others. This is why [Root.Adm_Advisor.GetSheHe] was called to your court, but despite [Root.Adm_Advisor.GetHerHis] helpful advice on many topics, [Root.Adm_Advisor.GetHerHis] knowledge of the divine remains a mystery to you.\n\nOne night, walking through the palace halls of [Root.Capital.GetCapitalName], you see $ARTIST$ putting the finishing touches on a statue and finally ask [Root.Adm_Advisor.GetHerHim] what visions allowed [Root.Adm_Advisor.GetHerHim] to portray the many faces of Shiva.\n'Each and every soul is part of the spirit of Lord Shiva,' $ARTIST$ answers, 'and just as Shiva created all there is, the soul is blessed with the power to create. Know this within yourself, and you will know the divine.'"
- hindu_events.2.a:0 "私はこのことを考える必要があるだろう。"
- hindu_events.2.b:0 "これらは、芸術家の言葉だ。[Root.Monarch.GetTitle]とは違う。"
+ hindu_events.2.d:1 "シヴァの栄光を芸術の形に捉えようという人々は数あれど、$ARTIST$は常に他者を超える成功を収めてきた。[Root.Adm_Advisor.GetSheHe]が宮廷に招かれた理由はまさにこれである。しかし、[Root.Adm_Advisor.GetHerHis]が様々な話題について有益な助言をしているにもかかわらず、[Root.Adm_Advisor.GetHerHis]の神についての知識はあなたにとって不可解なままであった。\n\nある夜、[Root.Capital.GetCapitalName]の宮殿内を歩いていると、$ARTIST$が彫像に最後の仕上げをしているところに出くわした。思い切って[Root.Adm_Advisor.GetHerHim]に尋ねた。さまざまな顔を持つシヴァを描く上で、[Root.Adm_Advisor.GetHerHim]はいかなるヴィジョンを元にしているのかを。\n「すべての人々の魂はそれぞれが主神シヴァの神霊の一部なのです」 と$ARTIST$ は答えた。「シヴァがこの世界のすべてを創造したのと同じように、魂は創造する力を神によって与えられています。 心の中を見つめてこのことを知りなさい。そうすればあなたは神を知るでしょう」"
+ hindu_events.2.a:0 "私はこのことを熟考する必要がある。"
+ hindu_events.2.b:0 "芸術家が言う話だ。[Root.Monarch.GetTitle]にとっては話が違う。"
  hindu_events.3.t:0 "スルスティ：創造"
  hindu_events.3.d:0 "創造についての芸術家の言葉と魂について数年の瞑想の後、あなたは世界の創造者としてのシヴァの思考についての多くの洞察に達した。あなたはまた、自分の遺産から創造の重要性を理解した。未来の思想家は、世界の成り立ちや民族の成り立ちについて瞑想した人として[Root.Monarch.GetName]を記憶するだろう。"
  hindu_events.3.a:0 "オーム。"
