--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -1175,7 +1175,7 @@
  desc_at_the_gates_of_europe:0 "ベオグラードの陥落に伴い、ヨーロッパへの道は今開いている。ウィーンからストックホルムまで、司祭たちは新たな脅威に対して人々を結集させている。一方で、我々はバルカンにおける新たな支配的権力であることを世界に対し明らかにした。古い秩序を覆すことを望む人々は、今や熱心に我々の雇用を求めている。"
  ottoman_hungary:0 "オスマン領ハンガリー"
  desc_ottoman_hungary:0 "ドナウ川の大部分を支配することで、カルパティア地域全体の軍隊に商品や物資をより効率的に輸送することができる。"
- principality_of_transylvania:0 "トランシルヴァニアの公国"
+ principality_of_transylvania:0 "トランシルヴァニア公国"
  desc_principality_of_transylvania:0 "トランシルヴァニア公国が我々の管理下にあることで、我々は東ハンガリーとカルパティア山脈の支配者である。しかし、トランシルヴァニア公国とその階級は、彼らの忠誠と、塩や金などの原材料の供給と引き換えに、大きな自由を許されている。"
  ottoman_naval_expansion:0 "オスマン海軍の成長"
  desc_ottoman_naval_expansion:0 "ギリシャの州を獲得したことで、数多くの経験豊かな水兵と海軍帝国への出発点となる、優れた港へのアクセスが得られた。"
@@ -1272,7 +1272,7 @@
  eng_culture_mission:0 "文化受容"
  desc_eng_culture_mission:0 "ゲール族の異教徒たちは放置しておけば、我々の生活様式を腐敗させるだろう。彼らに同等の地位が有ると思わせておくのが良いだろう。"
  eng_french_recovery:0 "勝者の譲歩"
- desc_eng_french_recovery:0 "我々はフランスの公国で勝利したため、敗北したフランスの兵士に我々のために戦う機会を提供した。どんな賃金でもないよりはましだ。"
+ desc_eng_french_recovery:0 "我々はフランス公国で勝利したため、敗北したフランスの兵士に我々のために戦う機会を提供した。どんな賃金でもないよりはましだ。"
  eng_caribbean_trade:0 "便利な労働力"
  desc_eng_caribbean_trade:0 "暴力的な原住民は厄介な相手に成るかもしれないが、彼らは優秀な奴隷となるだろう。"
  eng_chesapeake_dominance:0 "交易機関"
