--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -196,8 +196,8 @@
  NO_TARIFFS_COUNTRIES:0 "植民地なし"
  SUBJECT_SORT_TRADE:0 "交易力で並べ替え"
  SUBJECT_SORT_OPINION:0 "属国との関係で並べ替え"
- SUBJECT_NO_COLONIES:1 "一つも植民地を有していない。"
- SUBJECT_NO_VASSALS:1 "一つも属国を有していない。"
+ SUBJECT_NO_COLONIES:1 "一つも植民地を有していません。"
+ SUBJECT_NO_VASSALS:1 "一つも属国を有していません。"
  WE_ARE_AT_WAR:0 "戦争中である"
  cb_colonial_independance_war:0 "植民地独立"
  cb_colonial_independance_war_desc:0 "我々は独立すべきだ。"
