--- a/source/localisation/sprite_packs_l_english.yml
+++ b/source/localisation/sprite_packs_l_english.yml
@@ -47,7 +47,7 @@
  dlc015_fox_sprite_pack:0 "Fox Early Sprites"
  dlc015_asi_sprite_pack:0 "Assiniboine Early Sprites"
  dlc015_mmi_sprite_pack:0 "Miami Early Sprites"
- dlc016_eng_custom_sprite_pack:0 "English Colonial Sprites"
+ dlc016_eng_custom_sprite_pack:0 "イングランド植民地のスプライト"
  dlc016_fra_custom_sprite_pack:0 "フランス植民地のスプライト"
  ayu_base_sprite_pack:0 "アユタヤの基本スプライト"
  jap_base_sprite_pack:0 "日本の基本スプライト"
@@ -87,7 +87,7 @@
  dlc028_swe_sprite_pack:0 "福音派スウェーデンのスプライト"
  dlc028_bra_sprite_pack:0 "福音派ブランデンブルクのスプライト"
  dlc028_hes_sprite_pack:0 "福音派ヘッセンのスプライト"
- dlc028_eng_sprite_pack:0 "English Evangelical Sprites"
+ dlc028_eng_sprite_pack:0 "福音派イングランドのスプライト"
  dlc028_sax_sprite_pack:0 "福音派ザクセンのスプライト"
  dlc028_wur_sprite_pack:0 "福音派ヴュルテンベルクのスプライト"
  dlc028_ned_sprite_pack:0 "福音派オランダのスプライト"
@@ -121,11 +121,11 @@
  dlc041_cey_sprite_pack:0 "セイロンのスプライト"
  dlc041_dai_sprite_pack:0 "大越のスプライト"
  dlc041_lxa_sprite_pack:0 "ラーンサーンのスプライト"
- dlc042_rus_sprite_pack:0 "Russia Great Nation Sprites"
- dlc042_eng_sprite_pack:0 "English Great Nation Sprites"
+ dlc042_rus_sprite_pack:0 "大国ロシアのスプライト"
+ dlc042_eng_sprite_pack:0 "大国イングランドのスプライト"
  dlc042_ned_sprite_pack:0 "Netherlands Great Nation Sprites"
- dlc042_por_sprite_pack:0 "Portugal Great Nation Sprites"
- dlc042_tur_sprite_pack:0 "Ottoman Great Nation Sprites"
+ dlc042_por_sprite_pack:0 "大国ポルトガルのスプライト"
+ dlc042_tur_sprite_pack:0 "大国オスマンのスプライト"
  dlc043_frn_sprite_pack:0 "フランクフルトのスプライト"
  dlc043_ham_sprite_pack:0 "ハンブルクのスプライト"
  dlc043_num_sprite_pack:0 "ニュルンベルクのスプライト"
@@ -179,24 +179,24 @@
  dlc062_air_sprite_pack:0 "Air Sprites"
  dlc062_hau_sprite_pack:0 "Hausa Sprites"
  dlc062_tmb_sprite_pack:0 "Timbuktu Sprites"
- dlc067_dte_sprite_pack:0 "Date Early Sprites"
- dlc067_hsk_sprite_pack:0 "Hosokawa Early Sprites"
- dlc067_htk_sprite_pack:0 "Hatakeyama Early Sprites"
- dlc067_img_sprite_pack:0 "Imagawa Early Sprites"
- dlc067_otm_sprite_pack:0 "Otomo Early Sprites"
- dlc067_ouc_sprite_pack:0 "Ouchi Early Sprites"
- dlc067_sba_sprite_pack:0 "Shiba Early Sprites"
- dlc067_smz_sprite_pack:0 "Shimazu Early Sprites"
- dlc067_tkd_sprite_pack:1 "Takeda Early Sprites"
- dlc067_ues_sprite_pack:0 "Uesugi Early Sprites"
- dlc067_rfr_sprite_pack:0 "Nanbu Early Sprites"
- dlc067_ymn_sprite_pack:0 "Yamana Early Sprites"
- dlc068_jap_sprite_pack:0 "Japan Sprites"
- dlc068_kor_sprite_pack:0 "Korea Sprites"
- dlc068_mng_sprite_pack:0 "Ming Sprites"
+ dlc067_dte_sprite_pack:0 "初期伊達のスプライト"
+ dlc067_hsk_sprite_pack:0 "初期細川のスプライト"
+ dlc067_htk_sprite_pack:0 "初期畠山のスプライト"
+ dlc067_img_sprite_pack:0 "初期今川のスプライト"
+ dlc067_otm_sprite_pack:0 "初期大友のスプライト"
+ dlc067_ouc_sprite_pack:0 "初期大内のスプライト"
+ dlc067_sba_sprite_pack:0 "初期斯波のスプライト"
+ dlc067_smz_sprite_pack:0 "初期島津のスプライト"
+ dlc067_tkd_sprite_pack:1 "初期武田のスプライト"
+ dlc067_ues_sprite_pack:0 "初期上杉のスプライト"
+ dlc067_rfr_sprite_pack:0 "初期南部のスプライト"
+ dlc067_ymn_sprite_pack:0 "初期山名のスプライト"
+ dlc068_jap_sprite_pack:0 "日本のスプライト"
+ dlc068_kor_sprite_pack:0 "朝鮮のスプライト"
+ dlc068_mng_sprite_pack:0 "明のスプライト"
  dlc068_qng_sprite_pack:0 "Qing Sprites"
- dlc069_mch_sprite_pack:0 "Manchu Sprites"
- dlc069_kha_sprite_pack:0 "Mongol Sprites"
+ dlc069_mch_sprite_pack:0 "満州のスプライト"
+ dlc069_kha_sprite_pack:0 "モンゴルのスプライト"
  dlc069_oir_sprite_pack:0 "Oirat Sprites"
  dlc069_chg_sprite_pack:0 "Chagatai Sprites"
  dlc073_rya_sprite_pack:0 "リャザンのスプライト"
