--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -11,7 +11,7 @@
  SURRENDER:0 "降伏"
  SUGGEST_OFFER:0 "和平案の自動作成"
  SUGGEST_PEACE:0 "和平案の自動作成"
- NO_INTERACT_INVALID_GOV:1 "Their government is tied to their dynasty, so we cannot replace their ruler."
+ NO_INTERACT_INVALID_GOV:1 "彼らの政府は王朝と結びついており、君主を換えることはできません。"
  SUGGEST_PEACE_DESC:0 "敵が受け入れるであろう要求を作成するにはこのボタンを押して下さい。作成した後で送るかどうかを決めます。"
  SUGGEST_PEACE_IMPOSSIBLE:0 "現状、いかなる条件の要求も、彼らは受け入れないでしょう。"
  SURRENDER_IMPOSSIBLE:0 "現状、彼らは私達の要求を受け入れることはないでしょう"
@@ -36,7 +36,7 @@
  NAVIES_MOTHBALLED:0 "使用停止艦隊：§Y$VALUE$§!¤\n"
  STABEX_MANAGEOVEX:0 "管理"
  NATIVE_UPRISING:0 "原住民の反乱"
- MOVE_CAPITAL_TOO_SMALL_CONTINENT:1 "You cannot move capital to a continent that has less than a third of your total provinces, unless your capital is the last province you own on its continent."
+ MOVE_CAPITAL_TOO_SMALL_CONTINENT:1 "首都がその大陸最後の州でない限り、全ての州の三分の一以下の大陸に遷都できません。"
  CRBBREACH:0 "城壁に突破口を開きました！包囲している軍がこの要塞を襲撃するチャンスが広がりました！"
  CRBSIEGE1:0 "この都市は、何年も持ちこたえることができます。"
  CRBSIEGE2:0 "この都市は、おそらく12ヶ月以内には陥落するでしょう。"
@@ -53,8 +53,8 @@
  SPECTATOR:0 "観察者"
  NATIVE_REG_NAME:0 "部族"
  REBELS_ARMY_DUE_TO:0 "以下によりこの規模の軍を得ます：\n"
- REBELS_ARMY_BASE:1 "Base: $BASE|Y$ £icon_manpower_in_text£\n"
- REBELS_ARMY_PROV:1 "$NAME$: $MEN|Y$ £icon_manpower_in_text£\n"
+ REBELS_ARMY_BASE:1 "基本：$BASE|Y$ £icon_manpower_in_text£\n"
+ REBELS_ARMY_PROV:1 "$NAME$：$MEN|Y$ £icon_manpower_in_text£\n"
  REBELS_ARMY_TECH_SCALE:1 "軍事技術：$VALUE$\n"
  ADD_CHURCH_POWER_EFFECT:0 "教会権力$VALUE$を$DIRECTION$。\n"
  ADD_MILSOC_EFFECT:0 "国家の軍事化$VALUE$を$DIRECTION$。\n"
@@ -99,8 +99,8 @@
  ADD_ACCEPTED_CULTURE:0 "§Y$NEW$§Wの文化が受容されます。\n"
  REM_ACCEPTED_CULTURE:0 "§Y$LOSE$§Wの文化はもはや受容されていません。\n"
  BECOME_EMPEROR:0 "あなたは神聖ローマ皇帝になりました。\n"
- LOSE_EMPEROR:0 "神聖ローマ皇帝を退位しました。\n"
- BECOME_ELECTOR:0 "選帝侯になりました。\n"
+ LOSE_EMPEROR:0 "皇帝を退位します。\n"
+ BECOME_ELECTOR:0 "選帝侯になります。\n"
  LOSE_ELECTOR:0 "もはや選帝侯ではありません。\n"
  ADD_IDEA:0 "§Y$NEW$§Wを新たなアイデアとして採用します。\n"
  REM_IDEA:0 "§Y$LOSE$§Wがアイデアから外されます。\n"
@@ -124,7 +124,7 @@
  COLONISTS:0 "植民者$VALUE$を$DIRECTION$。\n"
  SPIES:0 "諜報員$VALUE$を$DIRECTION$。\n"
  DIPLOMATS:0 "外交官$VALUE$を$DIRECTION$。\n"
- HRE_STATUS:0 "§Y$WHERE$§Wは神聖ローマ帝国の一部を$DIRECTION$。\n"
+ HRE_STATUS:0 "§Y$WHERE$§Wは神聖ローマ帝国の一部$DIRECTION$。\n"
  BECOME:0 "になります"
  NOLONGER:0 "ではなくなります"
  PROV_MANPOWER:0 "$WHERE$の人的資源$VALUE$を$DIRECTION$。\n"
@@ -179,7 +179,7 @@
  swe:0 "スウェーデン"
  aboriginal:0 "アボリジニ"
  aimara:0 "アイマラ"
- aka:1 "Akan"
+ aka:1 "アカン"
  gulf_arabic:0 "ハリージー"
  al_iraqiya_arabic:0 "マシュリク"
  al_misr_arabic:0 "エジプト"
@@ -1172,7 +1172,7 @@
  NEGOTIATEDESC:0 "金銭、土地その他を取引するための交渉を始めます。"
  SENDGIFTNEWDESC:0 "$COUNTRY$に贈り物を送りますか？これは§Y$COST$§!¤のコストにより§Y$MONTHS$§!ヶ月間、関係が§G$OPINION$§!改善されます。"
  SENDGIFTNOCASH:0 "必要な資金が不足しています。"
- SENDGIFTNOMINCASH:1 "Gifts cannot be smaller than $MIN|Y$¤."
+ SENDGIFTNOMINCASH:1 "贈り物は$MIN|Y$¤よりも小さくすることはできません。"
  INSULTTITLE:0 "侮辱"
  INSULTDESC:0 "我々は彼らとの関係を大きく乱します。これは彼らに我々に対する開戦事由を与えるでしょう。"
  CLAIMTITLE:0 "王位を請求"
@@ -2463,8 +2463,8 @@
  PEACE_ANNEX:0 "併合"
  PEACE_GIVE_UP_CLAIMS:0 "請求権の放棄"
  AMOUNT_OF_TRADE_POWER_TRANSFERED:0 "送られる交易力の量"
- CONCEDE_COLONIAL_REGION_DESC:0 "$FROM$は$GIVER$に$REGION$を$TO$であると認めるよう強制するでしょう。"
- CONCEDE_COLONIAL_REGION_DESC_SIMPLE:0 "$FROM$は$REGION$が$TO$であると認めることを余儀なくされるでしょう。"
+ CONCEDE_COLONIAL_REGION_DESC:0 "$FROM$は$GIVER$に対し、$REGION$を$TO$に明け渡させることを余儀なくされるでしょう。"
+ CONCEDE_COLONIAL_REGION_DESC_SIMPLE:0 "$FROM$は$REGION$を$TO$に明け渡すことを余儀なくされるでしょう。"
  CANT_CANCEL_CONSTRUCTION_BECAUSE_OTHERS:0 "$WHO|Y$に属しているためキャンセルすることはできません。"
  PW_SEND:0 "派遣"
  PW_TAX:0 "税金："
@@ -2939,8 +2939,8 @@
  ESTATE_LOYALTY_LOSS:1 "§Y$ESTATE$§W階級は§R$LOYALTY$§Wの忠誠を失います（現在 $CURRENT$）\n"
  ESTATE_INFLUENCE_GAIN:1 "§Y$ESTATE$§W階級は$DATE|Y$までの間、§Y$CHANGE$§Wの影響力を獲得します（現在 $CURRENT$）\n"
  ESTATE_INFLUENCE_LOSS:1 "§Y$ESTATE$§!階級は$DATE|Y$までの間、§Y$CHANGE$§!の影響力を失います（現在 $CURRENT$）\n"
- ESTATE_LOYALTY_GAIN_TEMP:2 "The §Y$ESTATE$§! Estate gains §G$LOYALTY$%§! loyalty equilibrium until $DATE|Y$.\n"
- ESTATE_LOYALTY_LOSS_TEMP:2 "The §Y$ESTATE$§! Estate loses §R$LOYALTY$%§! loyalty equilibrium until $DATE|Y$.\n"
+ ESTATE_LOYALTY_GAIN_TEMP:2 "§Y$ESTATE$§!階級は$DATE|Y$までの間、§G$LOYALTY$%§!の忠誠の忠誠均衡値を得ます。\n"
+ ESTATE_LOYALTY_LOSS_TEMP:2 "§Y$ESTATE$§!階級は$DATE|Y$までの間、§R$LOYALTY$%§!の忠誠の忠誠均衡値を失います。\n"
  FACTION_INFLUENCE_GAIN:0 "§Y$FACTION$§Wは§Y$INFLUENCE$§Wの影響力を獲得します。\n"
  christian_daimyo_title:0 "吉利支丹への改宗"
  christian_daimyo_desc:0 "ヨーロッパからの新しいキリシタン宗教が藩の中に広がって以来、我々はこの新しい信条への改宗を検討した。我々の先祖の信仰を放棄することの意味を軽く考えるべきではない。"
@@ -3631,8 +3631,8 @@
  SIEGE_OF:0 "の包囲"
  BG_PRESTIGE:0 "威信："
  BG_COUNTRY:0 "国家："
- LIBERATE_VASSAL:1 "Create a vassal from some of your provinces."
- LIBERATE_SUBJECT:1 "Create a subject from some of your provinces."
+ LIBERATE_VASSAL:1 "自国の州の一部から属国を作成します。"
+ LIBERATE_SUBJECT:1 "自国の州の一部から従属国を作成します。"
  LOAD_GAME_FAILED:0 "ゲームのロードに失敗しました。"
  MP_FEW_PLAYERS:0 "ゲームを開始するには2人以上のプレイヤーが必要です。"
  MP_TRANSFERRING_SAVE:0 "セーブデータはすべてのプレイヤーに転送されるまでは起動できません。"
@@ -3701,7 +3701,7 @@
  DEFINE_CONQUISTADOR_EFFECT:1 "征服者§Y$NAME$§W（$FIRE$/$SHOCK$/$MANUEVER$/$SIEGE$）は任務に利用できるようになります。\n"
  DEFINE_GENERAL_EFFECT:1 "将軍§Y$NAME$§W（$FIRE$/$SHOCK$/$MANUEVER$/$SIEGE$）は任務に利用できるようになります。\n"
  RELEASE_VASSAL_EFFECT:0 "§Y$TARGET$§!は自由な国家となるでしょう。"
- BREAK_UNION_EFFECT:1 "$TARGET|Y$ will no longer be in union with $SENIOR|Y$.\n"
+ BREAK_UNION_EFFECT:1 "$TARGET|Y$はもはや$SENIOR|Y$と同君連合になることはないでしょう。\n"
  REVOLUTION_WAR_NAME:0 "$ORDER$$FIRST$革命戦争"
  MODIFIER_REMOVED:1 "$WHAT|Y$は$WHERE$から削除されます。\n"
  OPENEDMARKET:0 "彼らは我々に対して市場を閉鎖しています。"
@@ -3951,7 +3951,7 @@
  SPI_ADJ:0 "サルデーニャ＝ピエモンテ"
  SYR_ADJ:0 "シリア"
  VNZ_ADJ:0 "ベネズエラ"
- WES_ADJ:1 "Westphalian"
+ WES_ADJ:1 "ヴェストファーレン"
  WUU_ADJ:0 "呉"
  XIA_ADJ:0 "夏"
  REVOLUTIONARY_FRANCE_NAME:0 "革命フランス"
@@ -4018,8 +4018,8 @@
  INFLATION_LESS_THAN:0 "インフレが右記未満である："
  STABILITY_LESS_THAN:0 "安定度が右記未満である："
  STABILITY_MORE_THAN:0 "安定度が右記以上である："
- NUM_ASPECTS_LESS_THAN:1 "Number of Church Aspects is less than "
- NUM_ASPECTS_MORE_THAN:1 "Number of Church Aspects is at least "
+ NUM_ASPECTS_LESS_THAN:1 "教会のアスペクトの数が右記未満である："
+ NUM_ASPECTS_MORE_THAN:1 "教会のアスペクトの数が右記以上である："
  WAR_REPARATIONS_LESS_THAN:1 "$NUM|Y$未満の国から戦争賠償金を受けている（現在 $CURRENTNUM|Y$）"
  WAR_REPARATIONS_MORE_THAN:1 "$NUM|Y$カ国以上から戦争賠償金を受けている（現在 $CURRENTNUM|Y$）"
  WAR_REPARATIONS_LESS_THAN_COMP:0 "$COUNTRYNAME|Y$（$NUM|Y$）よりも少ない国から戦争賠償金を受けている。現在$CURRENTNUM|Y$。"
@@ -4331,10 +4331,10 @@
  HAVE_LESS_SAILORS_THEN_MAXIMUM:0 "最大水兵が右記未満である："
  HAVE_LESS_SAILORSPERCENT_THAN:0 "水兵レベルが右記未満である："
  HAVE_MORE_SAILORSPERCENT_THAN:0 "水兵レベルが右記以上である："
- IS_NOT_REVOLUTIONARY_TARGET:0 "革命の対象ではない"
- IS_REVOLUTIONARY_TARGET:0 "革命の対象である"
- THERE_IS_NOT_A_REVOLUTIONARY_TARGET_IN_THE_WORLD:0 "革命の対象が世界に存在しない"
- THERE_IS_A_REVOLUTIONARY_TARGET_IN_THE_WORLD:0 "革命の対象が世界に存在する"
+ IS_NOT_REVOLUTIONARY_TARGET:0 "革命目標ではない"
+ IS_REVOLUTIONARY_TARGET:0 "革命目標である"
+ THERE_IS_NOT_A_REVOLUTIONARY_TARGET_IN_THE_WORLD:0 "革命目標が世界に存在しない"
+ THERE_IS_A_REVOLUTIONARY_TARGET_IN_THE_WORLD:0 "革命目標が世界に存在する"
  FIRST_REVOLUTION_HAS_STARTED:0 "革命が世界で起こっている"
  FIRST_REVOLUTION_HAS_NOT_STARTED:0 "世界で革命は起こっていない"
  THE_NUMBER_OF_REVOLT_FRACTION_IS_MORE_THAN:0 "反乱を起こした州の数が右記以上である："
@@ -4441,7 +4441,7 @@
  UW_ATTACH_TO:0 "常に$NAME$に従って結合する。"
  UW_DETACH_FROM:0 "以下から$NAME$を切り離します。"
  UNIT_DETACH:0 "§Y切り離す§!"
- UNIT_ATTACH:1 "§YAttach§!\nHold §YShift§! to attach to any available unit on same province."
+ UNIT_ATTACH:1 "§Y結合する§!\n§Yシフト§!を押しながら選択すると、同じ州にいる接触可能な部隊のいずれかに結合します。"
  DIPRELCH_STRAINED_UNION:0 "連合内の文化の違い"
  ottoman_eastern_carabinier:0 "東方騎銃兵"
  ottoman_eastern_carabinierDESCR:0 "本質的には、騎銃兵としても知られている短いマスケット銃またはライフルを携帯する馬に乗った歩兵である。馬から降りて徒歩で戦う能力は、彼らに戦闘における大きな柔軟性をもたらした。"
@@ -5666,7 +5666,7 @@
  ADVISOR_LOCATION:0 "$LOCATION$"
  CREATE_ADVISOR:0 "§Y$WHICH$§Wを獲得（$EFFECT$）\n"
  DEFINE_ADVISOR:1 "$CULTURE|Y$文化の$RELIGION|Y$を信仰する$TYPE$の$NAME|Y$が宮廷に加わります。\n（スキル$SKILL|Y$、$EFFECT$）"
- DEFINE_ADVISOR2:3 "Gain a skill $SKILL|Y$ $TYPE$ ($EFFECT$)$CULTURE_TEXT$$RELIGION_TEXT$$LOCATION$."
+ DEFINE_ADVISOR2:3 "$CULTURE_TEXT$$RELIGION_TEXT$$LOCATION$スキル$SKILL|Y$の$TYPE$（$EFFECT$）を得ます。"
  improve_key_defensive_position_small_title:0 "$PROVINCENAME$の防御を向上"
  improve_key_defensive_position_small_desc:0 "$PROVINCENAME$の人々は、侵略の可能性に直面して防御が不十分であると懸念している。彼らは要塞が改善されることを心から望んでいる。"
  improve_key_defensive_position_medium_title:0 "$PROVINCENAME$に要塞を建設"
@@ -6000,9 +6000,9 @@
  enlightened_despotism_ruler_female_manchu:0 "皇后"
  UNIT_DETACH_SIEGE:0 "§Y包囲軍を切り離す§!"
  UNIT_DETACH_MERC:1 "§Y海兵隊を切り離す!"
- DETMER_NONE:1 "There are no marines in this army to detach."
- DETMER_ALL:1 "This army consists entirely of marines."
- DETMER_EXPL:1 "All marines from this unit will be detached and form a separate unit."
+ DETMER_NONE:1 "この軍には切り離せる海兵隊がいません。"
+ DETMER_ALL:1 "この軍は全て海兵で構成されています。"
+ DETMER_EXPL:1 "このユニットから全ての海兵を取り除き、別のユニットを形成します。"
  DETSIEG_NOSIEGE:0 "この州は包囲されていません。"
  DETSIEG_NOTENOUGH:0 "この軍隊は適切に包囲を実行するのに切り離せる十分なユニットを持っていません。"
  DETSIEG_EXPL:0 "これは適切に包囲を実行するために十分な数のユニットを切り離します。"
@@ -6032,7 +6032,7 @@
  PROV_TARIFF_DESCR:0 "関税は、海上交易を通じて得られ、母国に戻される税額の一部です。あなたが交易を保護するためには大きな艦隊が必要です。"
  PROV_TARIFF_S_DESCR:0 "海外の場合は関税が収集されます。"
  TARIFF_FACTOR:0 "関税が得られます："
- TARIFF_EFF:2 "Current Tariff Rate is §Y$EFF|%1$§W of $WHO$'s $INC|Y$¤ income, sending $VAL|Y$¤ to us."
+ TARIFF_EFF:2 "現在の関税率は$WHO$の収入$INC|Y$¤の§Y$EFF|%1$§Wで、我々に$VAL|Y$¤支払っています。"
  NO_TARIFF_HERE:0 "関税は海外の領土からのみ得られます。"
  UNIT_ENABLE_PATROL:0 "巡回中ではありません"
  UNIT_DISABLE_PATROL:0 "巡回中です"
@@ -6178,7 +6178,7 @@
  say_the_state_is_me_title:0 "朕は国家なり"
  say_the_state_is_me_desc:0 "神と唯一の神の恵みによって支配する権利が与えられた。我々は、我々の神に対して、他の小さき者たちによって制限された権利を与えるべきではない。"
  the_state_is_me:0 "朕は国家なり"
- desc_the_state_is_me:1 "Although some consider the quote ascribed to Louis XIV as apocryphal it in some ways sums up the nature of the absolute monarchy. The monarch should not be limited by tradition, local privilege or the nobility. Instead, as first amongst equals, he must be sole commander of the ship of state."
+ desc_the_state_is_me:1 "ルイ14世に帰された引用を捏造だと考える者もいるが、それは絶対君主制の性質をいくつかの点で総括している。君主たる者、伝統、地方の特権、貴族によって制限されるべきではない。代わりに、国家という船の唯一の指揮官でなければならないのだ。"
  MODIFIER_DIPLO_SKILL:0 "外交評判"
  establish_habsburg_dominance_title:0 "ハプスブルク家支配の確立"
  establish_habsburg_dominance_desc:0 "戦いは他の者に任せよ、汝幸いなるオーストリアよ、結婚せよ！"
@@ -6664,7 +6664,7 @@
  greenland_region:0 "グリーンランド"
  iceland_region:0 "アイスランド"
  northwest_america:0 "北西アメリカ"
- REINFORCE_INFO_TEXT:3 "If there is enough manpower in $SOURCE|Y$, this army will reinforce with $VALUE|Y$ men each month in this location. The local reinforce rate is $LOCAL|Y$% in this province, and we get a modifier of $COUNTRY$ from our nation's values$AND_FROM_LEADER$$AND_FROM_MERCENARY_COMPANY$."
+ REINFORCE_INFO_TEXT:3 "$SOURCE|Y$に十分な人的資源がある場合、この軍隊はこの場所で毎月$VALUE|Y$人の兵員を補充します。この州における兵員補充の割合は$LOCAL|Y$%で、国家からの補正$COUNTRY$を得ます。$AND_FROM_LEADER$$AND_FROM_MERCENARY_COMPANY$"
  REINFORCE_LEADER_EXTRA:1 "  さらに指揮官から$LEADER$%を得ます。"
  atlantic_ocean_islands:0 "大西洋諸島"
  mascarene_islands:0 "マスカリン諸島"
@@ -7515,7 +7515,7 @@
  IMPERIAL_MANDATE_BONUS_DESC:0 "§Y50§!を超える天命は以下の規模の補正を与えます：\n$MODIFIERDESC$"
  IMPERIAL_MANDATE_PENALTY_DESC:0 "§Y50§!を下回る天命は以下の規模の補正を与えます：\n$MODIFIERDESC$"
  IMPERIAL_MANDATE_GAIN_DESC:0 "以下によって得られます：\n－安定度が正である。\n－朝貢国を持つ。\n－ステートが繁栄を享受している。"
- IMPERIAL_MANDATE_LOSS_DESC:1 "Lost by:\n -Devastated provinces.\n -Corruption of the State.\n -Having loans."
+ IMPERIAL_MANDATE_LOSS_DESC:1 "以下によって失われます：\n－州が荒廃している。\n－国家に汚職がある。\n－借金がある。"
  CELESTIAL_EMPEROR_BENEFIT:0 "§Y中華皇帝§!となることは以下の恩恵をもたらします：\n"
  CELESTIAL_EMPEROR_BENEFIT_DESC:0 "－高い天命のボーナス\n－能力主義の仕組みの活用\n－集権化の勅令を制定可能\n－中国への恒久的な主張\n－中国統一の開戦事由\n－近隣諸国への朝貢の強制が可能"
  CELESTIAL_EMPEROR_DIPLOMATIC_ACTIONS_DESC:0 "§Y中華皇帝§!は以下の追加の外交行動を取ることがあります：\n$LIST|Y$"
@@ -8008,10 +8008,10 @@
  CHARTERCOMPANY_OFFDESC:1 "$RECIPIENT$に$PROV|Y$を売却する機会を提供します。あなたは管理費として$BASE|Y$¤と、金銭的魅力を高める$GAIN|Y$¤を支払います。"
  steppe_horde_legacy:1 "ステップの遊牧民"
  steppe_horde_legacy_desc:1 "君主や軍の支配者が部族の長となる政体で、すべての隣人に対して常に開戦事由を持ち、その軍隊は平原での戦いを得意とします。"
- revolutionary_republic_reform_desc:0 "The revolutionary republic represents the government of the nation by a small executive with the support of an elective chamber of deputies. Revolutionary propaganda gives the armies defending the revolution strong morale, and the principle that everyone is equal gives strong leadership."
+ revolutionary_republic_reform_desc:0 "革命共和国は代議院の支持を受けた少数の幹部が政府の代表となります。革命プロパガンダは革命を守る兵士に強い士気を与え、誰もが平等であるという主体は強い指導力を与えます。"
  revolutionary_republic_legacy:0 "革命共和国"
- revolutionary_republic_legacy_desc:0 "The revolutionary republic represents the government of the nation by a small executive with the support of an elective chamber of deputies. Revolutionary propaganda gives the armies defending the revolution strong morale, and the principle that everyone is equal gives strong leadership."
- revolutionary_empire_reform_desc:0 "The Revolutionary Empire is a slightly more conservative form of government with a single ruler ruling with reference a chamber of deputies. The government can mobilize a large amount of manpower, and every soldier carries a marshal's baton in his backpack."
+ revolutionary_republic_legacy_desc:0 "革命共和国は代議院の支持を受けた少数の幹部が政府の代表となります。革命プロパガンダは革命を守る兵士に強い士気を与え、誰もが平等であるという主体は強い指導力を与えます。"
+ revolutionary_empire_reform_desc:0 "革命帝国は一人の支配者が代議院に委任をする形で統治を行う、やや保守的な政体です。政府は大量の人的資源を動員でき、すべての兵士は背嚢に元帥杖を入れ、持ち運びます。"
  celestial_empire_legacy:0 "天朝"
  celestial_empire_legacy_desc:0 "天朝はその支配者を、天帝の意により国家を統治するために生まれた天子であると宣言する。"
  YOU_PLAY_AS_NEW_ESTATE_COUNTRY:0 "§Rあなたは開発度$DEV$の新しく形成された$RELIGION$国家でゲームを続けます！§!"
@@ -8075,12 +8075,12 @@
  MANDATE_FROM_5_LOANS:0 "$LOANS|Y$以上の借金："
  NO_REORGANISE_UNIT_GARRISON:0 "You can not reorganise with a garrison unit"
  ATTRITION_FROM_SUPPLY_LIMIT:0 "Attrition from Supply Limit: $VAL|R2%$\n (Weight: $WEIGHT|Y$ Supply: $SUPPLY|Y$)"
- estate_loan:0 "Estate Loan"
+ estate_loan:0 "階級の借金"
  ESTATE:0 "階級"
  ATTR_HOSTILE_WATERS:0 "§R$VAL$%§! - Hostile Waters"
  M_PICK_SHORTCUT_BUTTON:0 "ショートカットキーの選択"
- MAPMODE_SUPER_REGION:0 "Subcontinents"
- TARIFF_EXTRA:1 "Then that is increased by $VAL|+=$ due to:\n$WHY$"
+ MAPMODE_SUPER_REGION:0 "亜大陸"
+ TARIFF_EXTRA:1 "さらに以下の理由により$VAL|+=$増加します：\n$WHY$"
  CONVREL_STAB_NO_NEGATIVE:0 "改宗するには少なくとも§G0§!の安定度が必要です。"
  PAPAL_OPINION_OF_US:0 "教皇領の我々への評価により$VAL$の補正を受けます。"
  LOSE_CLAIMS_ON:0 "§Y$WHO$§!は§R$PROVS$§!の請求権を失うでしょう。"
@@ -8089,16 +8089,16 @@
  EMBARGOED_BY_DETAILS:0 "§Y$OTHER$§Wによる禁輸：§R$EFF$§W%"
  MESSAGE_BUTTON_SEARCH:0 "検索"
  MESSAGE_BUTTON_CLEAR:0 "クリア"
- MESSAGE_SEARCH_TOOLTIP:0 "Enter key words separated by §Yspace§! to filter the list."
+ MESSAGE_SEARCH_TOOLTIP:0 "リストをフィルタリングするため、§Yスペース§!で区切られたキーワードを入力してください。"
  TRADEPATROL_REPAIRING:0 "§Rこのユニットは現在修復中です。すぐに任務を継続するでしょう。§!"
- PEACE_VIEW_GOLD_ADD_REMOVE:0 "Click on §G+§! and §G-§! to §Gadd§! or §Gremove§!¤ into your offer or demand.\n$GOLD|+$¤ is worth around §Y$WS|+1$§! War Score."
+ PEACE_VIEW_GOLD_ADD_REMOVE:0 "賠償金の請求、或いは支払いを申し出る金額は§G＋§!や§G－§!によって§G増額§!または§G減額§!¤できます。\n$GOLD|+$¤はおおよそ§Y$WS|+1$§!相当の戦勝点に相当します。"
  PEACE_VIEW_GOLD_ADD_REMOVE_KEYS:0 "§Y右クリック§!で§Gさらに§!追加または削除します。\n§YShift +左クリック§!で§G最大§!まで追加または削除します。"
  PEACE_VIEW_GOLD_ADD_KEYS:1 "§YRMB§! to add larger increments.\n§YShift + LMB§! to add as much as they are willing to accept.\n§YShift + RMB§! to add the largest possible amount."
  PEACE_VIEW_GOLD_REMOVE_KEYS:1 "§YRMB§! to remove larger decrements.\n§YShift + LMB§! to set to as much as they are willing to accept.\n§YShift + RMB§! to set to zero."
  SIEGE_ARTILLERY_EXPLANATION:0 "砲兵は包囲ロールにボーナスを与えます。このボーナスは要塞レベルと比較して大砲の量に依存します。"
  SIEGE_ARTILLERY_LINE:0 "§Y$AMOUNT$§!の砲兵（§Y$BONUS$§!のボーナス）"
  SIEGE_STATUS_EXPLANATION:0 "包囲能力への影響："
- SIEGE_STATUS_LINE:0 "$NAME$：§Y$BONUS$§!の包囲能力"
+ SIEGE_STATUS_LINE:0 "$NAME$：§Y+$BONUS$§! 包囲能力"
  SIEGE_BREACH_EXPLANATION:0 "攻撃側は各包囲フェイズごとに城壁を破壊する可能性を持っています。城壁破壊は包囲ロールに§Y+$BREACHBONUS$§!のボーナスを与えます。砲兵は城壁を破壊する可能性を増加させ、また時代遅れの要塞は容易に城壁を破壊されます。"
  SIEGE_CHANCE_EXPLANATION:0 "各包囲フェイズごとにダイスロール（§Y$MIN$§!から§Y$MAX$§!）が起こります。このロールの出目は包囲補正値（$MODIFIERS$）に加算されます。1の出目では攻撃側に疾病の流行が発生し、その最大兵力数が§R$VAL$%§!減少します。\n\nロールの結果："
  SIEGE_CHANCE_LINE:0 "$NAME$：$RANGE$（可能性：$CHANCE$）"
@@ -8109,7 +8109,7 @@
  ANNUL_TREATIES_CANT_ALLIANCE:0 "条約無効化により§Y$DATE$§!まで同盟を締結することができません"
  ANNUL_TREATIES_CANT_MIL_ACCESS:0 "条約無効化により§Y$DATE$§!まで軍事通行権の取得、付与はできません。"
  CW_WARNSUBJECTS:1 "$ENEMY$には支配下の$COUNTRY$があり、彼らを支援するでしょう。"
- DIPLO_NEED_MORE_MILITARY_POWAH:0 "$WHO$ have §Y$CURRENT$§!£mil of §Y$NEEDED$§!£mil needed: "
+ DIPLO_NEED_MORE_MILITARY_POWAH:0 "$WHO$は必要な§Y$NEEDED$§!£mil£の§Y$CURRENT$§!£mil£を持っています："
  ATTR_TRADE_MISSION:0 "0%－交易任務の小型船"
  ATTR_NAVAL_BASE:0 "0%－友好港に隣接"
  NEXT_UNIT:0 "§Y次のユニット§!"
@@ -8119,7 +8119,7 @@
  PROV_RELIGION:0 "§Y$PROVINCE$§!の人々は§Y$PROVRELIGION$§!信仰に従っており、§Y$COUNTRY$§!の国教である§Y$STATERELIGION$§!によって$TYPE$とみなされています。"
  PROV_RELIGION_TYPE_HERETICS:0 "§R異端§!"
  PROV_RELIGION_TYPE_HEATHENS:0 "§R異教徒§!"
- PROV_RELIGION_TYPE_BELIEVERS:0 "§Gtrue believers§!"
+ PROV_RELIGION_TYPE_BELIEVERS:0 "§G熱狂的な信者§!"
  RELIGION_DESC:0 "あなたの国の異なる宗教に対する寛容度に応じて、州はさまざまな分野で正と負の両方の効果を持つことができます。"
  TRADER_DISCOVERED:0 "交易ノードが発見されています。"
  PEACE_CANNOT_GIVEUP_US_COST:0 "我々の州の総平和コストが大きすぎます。"
