--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -31,7 +31,7 @@
  ADM_EFFECT:0 "$WHO$が$VALUE$£adm£を$DIRECTION$\n"
  DIP_EFFECT:0 "$WHO$が$VALUE$£dip£を$DIRECTION$\n"
  MIL_EFFECT:0 "$WHO$が$VALUE$£mil£を$DIRECTION$\n"
- FRIENDLY_NEARBY_PROVINCE_STARTS:0 "近隣の友好的な州"
+ FRIENDLY_NEARBY_PROVINCE_STARTS:0 "隣接する友好州"
  NOT_HAS_INSTITUTION_IN_COUNTRY:0 "$COUNTRY$が$WHICH|Y$を受容していない\n"
  HAS_INSTITUTION_IN_COUNTRY:0 "$COUNTRY$が$WHICH|Y$を受容している\n"
  NOT_HAS_INSTITUTION_IN_PROV:1 "$WHICH|Y$が存在しない\n"
@@ -136,7 +136,7 @@
  TRIG_IS_NOT_IN_COALITION_AGAINST:0 "§Y$WHO$§!に対する包囲網に参加していない。\n"
  TRIG_ISIN_COALITION_AGAINST:0 "§Y$WHO$§!に対する包囲網に参加している。\n"
  DISBAND_REBELS:0 "§Y$NAME$§!が解散します。\n"
- EMPIRE_NO_FEMALE:0 "女性が皇帝になることはできない。\n"
+ EMPIRE_NO_FEMALE:0 "女性が皇帝になることができない。\n"
  EMPIRE_CAN_BE_FEMALE:0 "女性が皇帝になることができる。\n"
  HAVE_LESS_MERCENARIES_THAN:0 "§Y$VALUE$§!未満の傭兵を持っている。\n"
  HAVE_AT_LEAST_MERCENARIES_THAN:0 "§Y$VALUE$§!以上の傭兵を持っている。\n"
