--- a/source/localisation/text_l_english_0_815.yml
+++ b/source/localisation/text_l_english_0_815.yml
@@ -9,14 +9,14 @@
  MESSAGE_BUTTON_CLEAR:0 "クリア"
  MESSAGE_SEARCH_TOOLTIP:0 "リストをフィルタリングするため、§Yスペース§!で区切られたキーワードを入力してください。"
  TRADEPATROL_REPAIRING:0 "§Rこのユニットは現在修復中です。すぐに任務を継続するでしょう。§!"
- PEACE_VIEW_GOLD_ADD_REMOVE:0 "賠償金の請求、或いは支払いを申し出る金額は§G＋§!や§G－§!によって§G増額§!または§G減額§!¤できます。\n$GOLD|＋$¤はおおよそ§Y$WS|+1$§!相当の戦勝点に相当します。"
+ PEACE_VIEW_GOLD_ADD_REMOVE:0 "賠償金の請求、或いは支払いを申し出る金額は§G＋§!や§G－§!によって§G増額§!または§G減額§!¤できます。\n$GOLD|+$¤はおおよそ§Y$WS|+1$§!相当の戦勝点に相当します。"
  PEACE_VIEW_GOLD_ADD_REMOVE_KEYS:0 "§Y右クリック§!で§Gさらに§!追加または削除します。\n§YShift + 左クリック§!で§G最大§!まで追加または削除します。"
  PEACE_VIEW_GOLD_ADD_KEYS:0 "§Y右クリック§!で§Gさらに§!追加します。\n§YShift + 左クリック§!で§G最大§!まで追加します。"
  PEACE_VIEW_GOLD_REMOVE_KEYS:0 "§Y右クリック§!で§Gさらに§!削除します。\n§YShift + 左クリック§!で§G最大§!まで削除します。"
  SIEGE_ARTILLERY_EXPLANATION:0 "砲兵は包囲ロールにボーナスを与えます。このボーナスは要塞レベルと比較して大砲の量に依存します。"
  SIEGE_ARTILLERY_LINE:0 "§Y$AMOUNT$§!の砲兵（§Y+$BONUS$§!のボーナス）"
  SIEGE_STATUS_EXPLANATION:0 "包囲能力への影響："
- SIEGE_STATUS_LINE:0 "$NAME$：§Y+$BONUS$§!の包囲能力"
+ SIEGE_STATUS_LINE:0 "$NAME$：§Y+$BONUS$§! 包囲能力"
  SIEGE_BREACH_EXPLANATION:0 "攻撃側は各包囲フェイズごとに城壁を破壊する可能性を持っています。城壁破壊は包囲ロールに§Y+$BREACHBONUS$§!のボーナスを与えます。砲兵は城壁を破壊する可能性を増加させ、また時代遅れの要塞は容易に城壁を破壊されます。"
  SIEGE_CHANCE_EXPLANATION:0 "各包囲フェイズごとにダイスロール（§Y$MIN$§!から§Y$MAX$§!）が起こります。このロールの出目は包囲補正値（$MODIFIERS$）に加算されます。1の出目では攻撃側に疾病の流行が発生し、その最大兵力数が§R$VAL$%§!減少します。\n\nロールの結果："
  SIEGE_CHANCE_LINE:0 "$NAME$：$RANGE$（可能性：$CHANCE$）"
